Added some models (Teachers, Students and Classes)

--- a/src/SchoolSystem/Data/SchoolSystem.Data.Models/SchoolSystem.Data.Models.csproj
+++ b/src/SchoolSystem/Data/SchoolSystem.Data.Models/SchoolSystem.Data.Models.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\SchoolSystem.Common\SchoolSystem.Common.csproj" />
     <ProjectReference Include="..\SchoolSystem.Data.Common\SchoolSystem.Data.Common.csproj" />
   </ItemGroup>
   
