--- a/src/SchoolSystem/Data/SchoolSystem.Data/appsettings.json
+++ b/src/SchoolSystem/Data/SchoolSystem.Data/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=SchoolSystem;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=.;Database=SchoolSystem;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
