--- a/src/SchoolSystem/Web/SchoolSystem.Web.Infrastructure/SchoolSystem.Web.Infrastructure.csproj
+++ b/src/SchoolSystem/Web/SchoolSystem.Web.Infrastructure/SchoolSystem.Web.Infrastructure.csproj
@@ -18,4 +18,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Data\SchoolSystem.Data\SchoolSystem.Data.csproj" />
+    <ProjectReference Include="..\..\SchoolSystem.Common\SchoolSystem.Common.csproj" />
+  </ItemGroup>
+
 </Project>
