--- a/src/SchoolSystem/Data/SchoolSystem.Data/SchoolSystem.Data.csproj
+++ b/src/SchoolSystem/Data/SchoolSystem.Data/SchoolSystem.Data.csproj
@@ -44,4 +44,8 @@
     <ProjectReference Include="..\SchoolSystem.Data.Models\SchoolSystem.Data.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
