Added headmaster role

--- a/src/SchoolSystem/Web/SchoolSystem.Web/appsettings.json
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/appsettings.json
@@ -2,6 +2,13 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=SchoolSystem;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
+
+  "DirectorCredentials": {
+    "EmailAddress": "direktor@abv.bg",
+    "Password": "Theboss123",
+    "PhoneNumber": "+359893780675"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
