Implemented infinite scrolling for students ranking

--- a/src/SchoolSystem/Web/SchoolSystem.Web/appsettings.json
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/appsettings.json
@@ -8,6 +8,11 @@
     "Password": "Theboss123",
     "PhoneNumber": "+359893780675"
   },
+  "Dummy": {
+    "Egn": "0123456789",
+    "PhoneNumber": "0123456789",
+    "Password": "123456Tk"
+  },
 
   "Logging": {
     "LogLevel": {
